# Universal-UE-SDK

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  dllmain.cpp  exampleutils.h  listactors.h  listproperties.h
include/: UESDK.hpp
include/uesdk/: Macros.hpp  Offsets.hpp  PECallWrapper.hpp  PECallWrapper.inl  State.hpp  Status.hpp  UnrealObjects.hpp  UnrealObjects.inl  UnrealTypes.hpp  Utils.hpp
include/uesdk/core/: Cast.hpp  ObjectArray.hpp  ObjectArray.inl  UnrealContainers.hpp  UnrealEnums.hpp  UnrealObjects.hpp  UnrealObjects.inl  UnrealTypes.hpp
include/uesdk/helpers/: FastSearch.hpp  PECallWrapper.hpp  PECallWrapper.inl  PropertyInfo.hpp  ReflectionMacros.hpp  TlsArgBuffer.hpp
src/: uesdk.cpp
src/private/: Memory.cpp  Memory.hpp  OffsetFinder.cpp  OffsetFinder.hpp
src/uesdk/: FMemory.cpp  UnrealObjects.cpp  UnrealTypes.cpp
src/uesdk/core/: FMemory.cpp  ObjectArray.cpp  UnrealContainers.cpp  UnrealObjects.cpp  UnrealTypes.cpp
src/uesdk/helpers/: FastSearch.cpp  TlsArgBuffer.cpp
tests/: CMakeLists.txt  pass_simpleargs.cpp  test_helper.h
